crates/openapiv3_1/src/snapshots/openapiv3_1__tests__nest_open_apis.snap
---
source: crates/openapiv3_1/src/lib.rs
expression: paths
snapshot_kind: text
---
{
  "/api/v1/status": {
    "get": {
      "responses": {},
      "description": "Get status"
    }
  },
  "/api/v1/user/": {
    "get": {
      "responses": {},
      "description": "Get user details"
    }
  },
  "/api/v1/user/foo": {
    "post": {
      "responses": {}
    }
  }
}
