crates/openapiv3_1/src/snapshots/openapiv3_1__tests__openapi_custom_extension.snap
---
source: crates/openapiv3_1/src/lib.rs
expression: api
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "",
    "version": ""
  },
  "paths": {},
  "x-tagGroup": "anything that serializes to Json"
}
