crates/openapiv3_1/src/snapshots/openapiv3_1__tests__serialize_openapi_json_minimal_success.snap
---
source: crates/openapiv3_1/src/lib.rs
expression: openapi
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "My api",
    "description": "My api description",
    "license": {
      "name": "MIT",
      "url": "http://mit.licence"
    },
    "version": "1.0.0"
  },
  "paths": {}
}
